--- a/index.html
+++ b/index.html
@@ -1,31 +1,73 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | Fylo data storage component</title>
+  </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo data storage component</title>
+  <body>
+    <div class="wrapper">
+      <main class="container">
+        <section class="actions">
+          <img class="actions__logo" src="./img/logo.svg" alt="Fylo Logo" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+          <ul class="actions__list">
+            <li class="actions__item">
+              <img
+                src="./img/icon-document.svg"
+                alt="Document"
+                class="actions__icon"
+              />
+            </li>
+            <li class="actions__item">
+              <img
+                src="./img/icon-folder.svg"
+                alt="Folder"
+                class="actions__icon"
+              />
+            </li>
+            <li class="actions__item">
+              <img
+                src="./img/icon-upload.svg"
+                alt="Upload"
+                class="actions__icon"
+              />
+            </li>
+          </ul>
+        </section>
 
-  You’ve used 815 GB of your storage
+        <section class="usage">
+          <p class="usage__text">
+            You’ve used <strong>815 GB</strong> of your storage
+          </p>
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+          <div class="usage__bar"></div>
+
+          <div class="usage__labels">
+            <p class="usage__label">0 GB</p>
+            <p class="usage__label">1000 GB</p>
+          </div>
+
+          <div class="popup">
+            <p class="popup__text">
+              <span class="popup__accent">185</span> GB Left
+            </p>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
