--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="wrapper">
       <main class="container">
         <section class="actions">
+          <h1 class="hidden">Fylo</h1>
           <img class="actions__logo" src="./img/logo.svg" alt="Fylo Logo" />
 
           <ul class="actions__list">
@@ -50,6 +51,8 @@
         </section>
 
         <section class="usage">
+          <h1 class="hidden">Usage</h1>
+
           <p class="usage__text">
             You’ve used <strong>815 GB</strong> of your storage
           </p>
